--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <body>
         <h1>Hello World</h1>
         <p>This is the first file in my new Git repo.</p>
+        <div><img src= "img_hello_world.jpg" alt="hello world from space"
+        style="width:100%;max-width: 960x"</div>
         <p>A new line in our file!</p>
+        <p>A new 'fake' picture has been added right here</p>
     </body>
 </html>
