updated index file fixed

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         style="width:100%;max-width: 960x"</div>
         <p>A new line in our file!</p>
         <p>A new 'fake' picture has been added right here</p>
+
+        <p> this line is here to show that the merging of the files worked</p>
     </body>
 </html>
