--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         style="width:100%;max-width: 960x"</div>
         <p>A new line in our file!</p>
         <p>A new 'fake' picture has been added right here</p>
+
+        <div><img src="img_hello_git.jpg" alt="Hello Git" style="width: 100%;max-width:640px"</div>
     </body>
 </html>
