Update index.html that simply added a new line

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 
         <div><img src="img_hello_git.jpg" alt="Hello Git" style="width: 100%;max-width:640px"</div>
         <p> this is the first file in my new Git Repo</p>
+        <p> this is another line to memic the changes and addtions to the file</p>
     </body>
 </html>
